--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "next",
+		"@tailwindcss/forms": "^0.3.3",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"autoprefixer": "^10.3.4",
@@ -25,11 +26,11 @@
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
+		"svelte-i18n": "^3.3.10",
 		"svelte-preprocess": "^4.9.4",
 		"tailwindcss": "^2.2.15",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3",
-		"@tailwindcss/forms": "^0.3.3"
+		"typescript": "^4.4.3"
 	},
 	"type": "module",
 	"dependencies": {}
