--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"postcss-load-config": "^3.1.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
+		"superagent": "^6.1.0",
 		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
 		"svelte-i18n": "^3.3.10",
