--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint/parser": "^4.31.1",
 		"autoprefixer": "^10.3.4",
 		"cssnano": "^5.0.8",
+		"dayjs": "^1.10.7",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
