--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"svelte-i18n": "^3.3.10",
 		"svelte-preprocess": "^4.9.4",
 		"tailwindcss": "^2.2.15",
+		"thai-data": "^1.0.9",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
