--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "next",
@@ -21,6 +22,8 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"husky": ">=6",
+		"lint-staged": ">=10",
 		"postcss": "^8.3.6",
 		"postcss-load-config": "^3.1.0",
 		"prettier": "^2.4.1",
@@ -36,5 +39,9 @@
 		"typescript": "^4.4.3"
 	},
 	"type": "module",
-	"dependencies": {}
+	"dependencies": {},
+	"lint-staged": {
+		"*.js": "eslint --cache --fix",
+		"*.{js,css,md}": "prettier --write"
+	}
 }
