--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
 	"type": "module",
 	"dependencies": {},
 	"lint-staged": {
-		"src/**/*.svelte,src/**/*.js,src/**/*.ts": "eslint --cache --fix",
-		"*.{js,css,md}": "prettier --write"
+		"*.svelte":["prettier --write", "eslint --fix --max-warnings 0"]
 	}
 }
