--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"prepare": "husky install"
-	},
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .", "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .", "prepare": "husky install" },
 	"devDependencies": {
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.3.3",
@@ -41,7 +38,7 @@
 	"type": "module",
 	"dependencies": {},
 	"lint-staged": {
-		"*.svelte": [
+		"*.{svelte,js,ts,html,css}": [
 			"prettier --write",
 			"eslint --fix --max-warnings 0"
 		]
