--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint-plugin-svelte3": "^3.2.1",
 		"husky": ">=6",
 		"lint-staged": ">=10",
+		"papaparse": "^5.3.1",
 		"postcss": "^8.3.6",
 		"postcss-load-config": "^3.1.0",
 		"prettier": "^2.4.1",
