--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"postcss-load-config": "^3.1.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
+		"reflect-metadata": "^0.1.13",
 		"superagent": "^6.1.0",
 		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
@@ -38,6 +39,7 @@
 		"tailwindcss": "^2.2.15",
 		"thai-data": "^1.0.9",
 		"tslib": "^2.3.1",
+		"typeorm": "^0.2.38",
 		"typescript": "^4.4.3"
 	},
 	"type": "module",
