--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"eslint-plugin-svelte3": "^3.2.1",
 		"husky": ">=6",
 		"lint-staged": ">=10",
-		"mysql": "^2.18.1",
+		"mysql2": "^2.3.3-rc.0",
 		"papaparse": "^5.3.1",
 		"postcss": "^8.3.6",
 		"postcss-load-config": "^3.1.0",
