--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "smart-dental",
 	"version": "0.0.1",
 	"scripts": {
+		"test": "jest",
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
@@ -12,9 +13,14 @@
 		"prepare": "husky install"
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.16.0",
+		"@babel/plugin-proposal-decorators": "^7.16.0",
+		"@babel/preset-env": "^7.16.0",
+		"@babel/preset-typescript": "^7.16.0",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.3.3",
+		"@types/jest": "^27.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"autoprefixer": "^10.3.4",
@@ -24,6 +30,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"husky": ">=6",
+		"jest": "^27.3.1",
 		"lint-staged": ">=10",
 		"mysql2": "^2.3.3-rc.0",
 		"papaparse": "^5.3.1",
