--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"module": "ES2020",
-		"lib": [
-			"es2020",
-			"DOM"
-		],
+		"lib": ["es2020", "DOM"],
 		"target": "es2019",
 		/**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
@@ -26,20 +23,11 @@
 		"allowJs": true,
 		"checkJs": true,
 		"paths": {
-			"$lib": [
-				"src/lib"
-			],
-			"$lib/*": [
-				"src/lib/*"
-			]
+			"$lib": ["src/lib"],
+			"$lib/*": ["src/lib/*"]
 		},
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true
 	},
-	"include": [
-		"src/**/*.d.ts",
-		"src/**/*.js",
-		"src/**/*.ts",
-		"src/**/*.svelte"
-	]
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
