add appuser setup service

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.3.3",
+		"@types/bcrypt": "^5.0.0",
 		"@types/jest": "^27.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"autoprefixer": "^10.3.4",
+		"bcrypt": "^5.0.1",
 		"cssnano": "^5.0.8",
 		"dayjs": "^1.10.7",
 		"eslint": "^7.32.0",
