--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
 		"typescript": "^4.4.3"
 	},
 	"type": "module",
-	"dependencies": {},
+	"dependencies": {
+		"dotenv": "^10.0.0"
+	},
 	"lint-staged": {
 		"*.{svelte,js,ts,html,css}": [
 			"prettier --write",
