--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@babel/plugin-proposal-decorators": "^7.16.0",
 		"@babel/preset-env": "^7.16.0",
 		"@babel/preset-typescript": "^7.16.0",
+		"@sveltejs/adapter-node": "^1.0.0-next.55",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.3.3",
