--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@babel/plugin-proposal-decorators": "^7.16.0",
 		"@babel/preset-env": "^7.16.0",
 		"@babel/preset-typescript": "^7.16.0",
+		"@originjs/vite-plugin-commonjs": "^1.0.1",
 		"@sendgrid/mail": "^7.6.0",
 		"@sveltejs/adapter-node": "^1.0.0-next.55",
 		"@sveltejs/adapter-vercel": "next",
@@ -27,6 +28,7 @@
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"autoprefixer": "^10.3.4",
+		"aws-sdk": "^2.1040.0",
 		"bcrypt": "^5.0.1",
 		"cssnano": "^5.0.8",
 		"dayjs": "^1.10.7",
@@ -36,7 +38,9 @@
 		"husky": ">=6",
 		"jest": "^27.3.1",
 		"lint-staged": ">=10",
+		"mock-aws-s3": "^4.0.2",
 		"mysql2": "^2.3.3-rc.0",
+		"nock": "^13.2.1",
 		"papaparse": "^5.3.1",
 		"postcss": "^8.3.6",
 		"postcss-load-config": "^3.1.0",
