--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"postcss-load-config": "^3.1.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
+		"quill": "^1.3.7",
 		"reflect-metadata": "^0.1.13",
 		"superagent": "^6.1.0",
 		"svelte": "^3.42.6",
