--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"mysql2": "^2.3.3-rc.0",
 		"nock": "^13.2.1",
 		"papaparse": "^5.3.1",
+		"pleasejs": "^0.4.2",
 		"postcss": "^8.3.6",
 		"postcss-load-config": "^3.1.0",
 		"prettier": "^2.4.1",
