--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"tailwindcss": "^2.2.15",
 		"thai-data": "^1.0.9",
 		"tslib": "^2.3.1",
+		"tui-image-editor": "^3.15.2",
 		"typeorm": "^0.2.38",
 		"typescript": "^4.4.3"
 	},
